# atmosphere

./: .ansible-lint  .charts.yml  .coveragerc  .dockerignore  .gitignore  .gitreview  .goreleaser.yaml  .goreleaser.yml  .markdownlint-cli2.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  .release-please-manifest.json  .stestr.conf  .vale.ini  .yamllint.yaml  .zuul.yaml  CEPH_OSD_EXPORTER_CHART_MIGRATION.md  CEPH_OSD_EXPORTER_PR_DESCRIPTION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Earthfile  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  Jenkinsfile  NEXT_STEPS_FOR_MAINTAINER.md  README.md  README.rst  README_PR.md  SUMMARY.md  VERIFICATION.md  ansible-lint.xml  ansible.cfg  ceph-osd-exporter-chart.patch  depot.json  docker-bake.hcl  flake.nix  galaxy.yml  go.mod  (+21 more)
.config/: ansible-lint.yml
.github/: renovate.json
.github/instructions/: alerts.instructions.md  docker.instructions.md  helm-charts.instructions.md  vale.instructions.md
.github/workflows/: aio.yml  backports.yaml  binary-download.yml  ceph.yml  check-pr-title.yml  check.yml  ci.yaml  claude.yml  containerd.yml  csi.yml  docs.yml  image-manifest.yml  image.yml  images.yaml  images.yml  integration.yml  keycloak.yml  kubernetes-aio.yml  kubernetes-ha.yml  lint.yml  linters.yaml  linters.yml  magnum.yml  manila.yml  molecule.yml  pages.yml  pr.yaml  pr_stale.yml  promote.yml  publish.yml  pxc.yml  release.yaml  release.yml  sync.yml  test-master.yml  test-wallaby.yml  test-xena.yml  test-yoga.yml  test.yml  update-images.yaml
atmosphere/: __init__.py  clients.py  deploy.py  exceptions.py  flows.py  logger.py  operator.py  shell.py  utils.py  workflows.py
atmosphere/cmd/: __init__.py  cli.py  deploy.py  molecule.py  operator.py
atmosphere/config/: __init__.py  images.py  memcached.py
atmosphere/jsonnet/: ceph.libsonnet  jsonnetfile.json  jsonnetfile.lock.json  legacy.libsonnet  mysqld.libsonnet  rules.jsonnet
atmosphere/models/: base.py  conf.py  config.py
atmosphere/operator/: constants.py  tasks.py  utils.py
atmosphere/tasks/: constants.py  flux.py  kubernetes.py  openstack_helm.py
atmosphere/tests/: conftest.py
charts/: charts_test.go
charts/bank-vaults-vault-operator/: .helmignore  Chart.yaml  README.md  values.yaml
charts/bank-vaults-vault-secrets-webhook/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/barbican/: Chart.yaml  values.yaml
charts/ceph-csi-rbd/: Chart.yaml  values.yaml
charts/ceph-osd-exporter/: Chart.yaml  values.yaml
charts/ceph-provisioners/: CHANGELOG.md  Chart.yaml  requirements.yaml
charts/cert-manager/: Chart.yaml  README.md
charts/cert-manager-csi-driver/: Chart.yaml
charts/cert-manager-webhook-infoblox-wapi/: Chart.yaml  ci-config.yaml  values.schema.json  values.yaml
charts/cilium/: Chart.yaml
charts/cinder/: Chart.yaml  values.yaml
charts/coredns/: Chart.yaml  values.yaml
charts/designate/: CHANGELOG.md  Chart.yaml  values.yaml
charts/frr-k8s/: Chart.yaml  README.md  values.yaml
charts/glance/: Chart.yaml  requirements.yaml  values.yaml
charts/godaddy-webhook/: Chart.yaml  values.yaml
charts/goldpinger/: Chart.yaml
charts/heat/: Chart.yaml  values.yaml
charts/horizon/: CHANGELOG.md  Chart.yaml  values.yaml
charts/hpe-csi-driver/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/ingress-nginx/: Chart.yaml  values.yaml
charts/ironic/: Chart.yaml  values.yaml
charts/keycloak/: Chart.yaml  values.yaml
charts/keystone/: CHANGELOG.md  Chart.yaml  values.yaml
charts/kube-prometheus-stack/: Chart.yaml  values.yaml
charts/libvirt/: CHANGELOG.md  Chart.yaml  values.yaml
charts/local-path-provisioner/: values.yaml
charts/loki/: Chart.yaml  values.yaml
charts/magnum/: Chart.yaml  values.yaml
charts/manila/: Chart.yaml  values.yaml
charts/masakari/: Chart.yaml  requirements.yaml  values.yaml
charts/memcached/: CHANGELOG.md  Chart.yaml  requirements.yaml
charts/neutron/: CHANGELOG.md  Chart.yaml  (+1 more)
ci/: build-image-matrix  build-image-strategy  build-matrix  build-project-matrix  build-release-matrix  check-image-exists  image_tags_test.go  molecule.go  openstack-image-build-env  purge-github-cache  update-openstack-images-data
crates/imagebumper/: Cargo.toml
crates/imagebumper/src/: lib.rs  main.rs  repository.rs
crates/imagebumper/src/clients/: github.rs  mod.rs  opendev.rs
crates/kube-prometheus-stack/: Cargo.toml
crates/kube-prometheus-stack/src/: lib.rs
crates/ovsinit/: Cargo.toml
crates/ovsinit/src/: config.rs  lib.rs  main.rs  routes.rs
doc/: requirements.txt
docs/: SUMMARY.md  alerts.md  backup-percona-cluster.md  build_custom_images.md  certificates.md  coe.md  dns.md  index.md  ingress.md  integrations.md  monitoring.md  operations_guide.md  operator.md  quick-start.md  storage.md
hack/: generate-github-workflows  helm-unittest.py  kind.yml  promtool-test.py  sync-charts.sh
images/: Earthfile  _base.yaml  _openstack-service.yaml  barbican.yaml  base.yaml  build.sh  designate.yaml  heat.yaml  kubernetes-entrypoint.yaml  master.yml  octavia.yaml  placement.yaml  python-openstackclient.yaml
issues/: 100.json
meta/: runtime.yml
playbooks/: autohealer.yml  barbican.yml  ceph.yml  ceph_packages.yml  ceph_provisioners.yml  cert_manager.yml  cinder.yml  cleanup.yml  cluster_issuer.yml  cni.yml  coredns.yml  csi.yml  designate.yml  flux.yml  generate_secrets.yml  generate_workspace.yml  glance.yml  heat.yml  helm.yml  horizon.yml  host_bond0_vlan_setup.yml  image_manifest.yml  image_warmup.yml  infrastructure.yml  ingress_nginx.yml  ipmi_exporter.yml  ironic.yml  ironic_emmulator.yml  ironic_emulator.yml  keepalived.yml  keycloak.yml  keystone.yml  kube_prometheus_stack.yml  kubernetes.yml  libvirt.yml  loki.yml  lpfc.yml  magnum.yml  magnum_maintenance.yml  manila.yml  (+33 more)
releasenotes/: config.yaml
roles/: AGENTS.md
tests/: image_tests.rs
tools/: generate-galaxy-yml.py  purge-github-cache.sh
zuul.d/: docs.yaml  github.yaml  images-master.yaml  images.yaml  jobs.yaml  project.yaml  secrets.yaml  wheels-master.yaml  wheels-wallaby.yaml  wheels.yaml
(+2866 files in other folders)
