[package]
name = "atmosphere"
edition = "2021"

[dependencies]
git2 = "0.20.0"
git2-hooks = "0.4.0"
indoc = "2.0.5"
md5 = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
rustainers = { path = "crates/rustainers" }

[workspace]
members = [ "crates/*" ]
