[package]
name = "atmosphere"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
git2 = "0.20.0"
git2-hooks = "0.4.0"
imagebumper = { path = "crates/imagebumper" }
indoc = "2.0.5"
log = { version = "0.4.25", features = ["kv"] }
md5 = "0.7.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
rustainers = { path = "crates/rustainers" }

[workspace]
members = [ "crates/*" ]
