[package]
name = "atmosphere"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
imagebumper = { path = "crates/imagebumper" }
log = { version = "0.4.25", features = ["kv"] }
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
rustainers = { path = "crates/rustainers" }

[workspace]
members = [ "crates/*" ]
