[metadata]
name = atmosphere
summary = Simple & easy private cloud platform featuring VMs, Kubernetes & bare-metal
description_file =
    README.rst
author = VEXXHOST, Inc.
author_email = support@vexxhost.com
url = https://github.com/vexxhost/atmosphere
project_urls =
    Bug Tracker = https://github.com/vexxhost/atmosphere/issues
    Documentation = https://vexxhost.github.io/atmosphere/
    Source Code = https://github.com/vexxhost/atmosphere
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
