[package]
name = "imagebumper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
clap = { version = "4.5.29", features = ["derive"] }
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
gitea-sdk = "0.5.0"
log = { version = "0.4.25", features = ["kv"] }
octocrab = "0.43.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.5.4"
