[package]
name = "kube-prometheus-stack"
edition = "2021"
publish = false

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
kcr_monitoring_coreos_com = "1.20250426.145342"
once_cell = "1.21.3"
rsjsonnet-front = "0.3.0"
rsjsonnet-lang = "0.3.0"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.19.1"
