[package]
name = "ovsinit"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
futures = "0.3.31"
futures-util = "0.3.31"
ipnet = "2.11.0"
log = { version = "0.4.25", features = ["kv"] }
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
